[metadata]
name = sytil
version = 0.0.1
author = Sunwoo Han and Youyi Fong
author_email = sunwooya@gmail.com
description = Utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youyifong/syotil
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
